fixed the spacing

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,20 @@
 .qoute {
     width: 500px;
     margin-top: 200px;
-    margin-left: 455px;
-    
+    margin-left: 455px;    
+}
+
+.qoute2 {
+    width: 1000px;
+    margin-top: 450px;
+       
+}
+
+.background1 {
+    background-image: url("IMG_1907.jpg");
+    background-repeat: no-repeat;
+    background-size: 1520px 730px;
+
+article {
+    margin-top: 300px;
 }
